fix(slidingpane): remove z-index

--- a/src/components/SlidingPane/SlidingPane.scss
+++ b/src/components/SlidingPane/SlidingPane.scss
@@ -7,7 +7,6 @@
   left: 0;
   right: 0;
   transition: all 500ms ease-out;
-  z-index: 1;
   background-color: color(snow);
   margin-left: 0;
 
